fixed up spacing and called it good.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -157,34 +157,24 @@ body {
 
 #landing-box {
     position: relative;
-    width: 100%;
-    height: 100vh;
-    margin: 0;
+    margin-bottom: 50px;
     padding-top: 10px; 
     overflow: hidden;
 }
-
-#landing-img {
-    width: 100%;
-    height: 100%;
-    object-fit: fill;
-}
-
 #landing-box h1 {
     position: absolute;
     font-size: 4em;
     color: white;
 }
 
-#landing-welcome {
-    top: 10px;
-    left: 60px;
-    text-align: right;
+#landing-img {
+    width: 60%;
 }
 
-#second-landing-welcome {
-    bottom: 10px;
-    right: 60px;
+#about {
+    background-color: #9DADBC;
+    padding: 2%;
+    margin: 0 5%;
 }
 
 #content-container {
